Fix Education alignment, add new Title and add hyperlinks

--- a/src/app/education/education.component.css
+++ b/src/app/education/education.component.css
@@ -62,7 +62,7 @@
 .timeline-dot {
   position: absolute;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-55%);
   background-color: #6c63ff;
   color: #fff;
   border-radius: 50%;
@@ -80,7 +80,6 @@
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   padding: 1.5rem;
-  text-align: left;
   width: 80%;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
